<resources>
    <string name="app_name">Which One Is Larger?</string>
    <string name="left_btn">Left</string>
    <string name="right_btn">Right</string>
    <string name="Score">Your Score is Zero </string>
    <string name="Step">Round Number Zero </string>
    <string name="Equal_btn">Equal</string>
    <string name="score_text">you\'r score is : %d</string>
    <string name="Finished">Game Finished</string>
    <string name="Round">You are in Round %s out of 30</string>
    <string name="Remaining_time">Remaining time : %d second</string>
    <string name="start_game">Start Game</string>
    <string name="show_best_score">Show Best Score</string>

</resources>