<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee"
    android:clickable="true"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/user_score"
        android:layout_width="wrap_content"
        android:textSize="20sp"
        android:text="@string/Score"
        android:padding="5dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content">
    </TextView>
    <TextView
        android:id="@+id/game_level"
        android:layout_width="wrap_content"
        android:textSize="15sp"
        android:text="@string/Step"
        android:padding="5dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/left_num"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/left_btn"
            tools:ignore="ButtonStyle">
        </Button>
        <Button
            android:id="@+id/right_num"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/right_btn"
            tools:ignore="ButtonStyle">
        </Button>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Equal_btn"
        android:id="@+id/equal"
        android:layout_gravity="center_horizontal">
    </Button>

</LinearLayout>